--- a/firstproject/templates/index.html
+++ b/firstproject/templates/index.html
@@ -1,6 +1,6 @@
-<html>
-<head></head>
-<body>
+{% extends "base.html" %}
+{% block title %}首頁{% endblock %}
+
+{% block content %}
 	<h1>Hello django</h1>
-</body>
-</html>
+{% endblock %}
