--- a/firstproject/templates/index2.html
+++ b/firstproject/templates/index2.html
@@ -1,7 +1,7 @@
-<html>
-<head></head>
-<body>
+{% extends "base.html" %}
+{% block title %}Hello1{% endblock %}
+
+{% block content %}
 	<h1>歡迎:{{username}}</h1>
 	<h2>時間:{{now}}</h2>
-</body>
-</html>
+{% endblock %}
