--- a/firstproject/templates/listone.html
+++ b/firstproject/templates/listone.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>顯示一筆資料</title>
-	</head>
-	<body>
+{% extends "base.html" %}
+{% block title %}顯示一筆資料{% endblock %}
+
+{% block content %}
 		<h2>顯示 student 資料表一筆資料{{errormessage}}</h2>
         編號：{{ unit.id }} <br />
         姓名：{{ unit.stuName }}  <br />
@@ -13,5 +11,4 @@
         郵件帳號：{{unit.stduEmail }}  <br />
         電話：{{ unit.stuPhone }}  <br />
         地址：{{ unit.stuAddress}}  <br />
-	</body>
-</html>	
+ {% endblock %}
