--- a/firstproject/templates/addstudent.html
+++ b/firstproject/templates/addstudent.html
@@ -6,7 +6,13 @@
         {% csrf_token %}
         <div>請輸入姓名:<input type="text" name="stuName"/>
         <div>請輸入學號:<input type="text" name="stuID"/>
-        <div>請輸入性別:<input type="text" name="stuSex"/>
+        <div>請輸入性別:
+            <select name="stuSex" >
+            <option selected>男</option>
+            <option>女</option>
+            <option>其他</option>
+          </select>
+        </div>  
         <div>請輸入生日:<input type="date" name="stuBirth"/>
         <div>請輸入電子郵件:<input type="mail" name="stuEmail"/>
         <div>請輸入電話:<input type="text" name="stuPhone"/>
