--- a/firstproject/templates/base.html
+++ b/firstproject/templates/base.html
@@ -48,6 +48,7 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/listall">listall</a>
           <a class="dropdown-item" href="/listone">listone</a>
+          <a class="dropdown-item" href="/post">addstd</a>
         </div>
       </li>
       <li class="nav-item dropdown">
