--- a/firstproject/templates/base.html
+++ b/firstproject/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  {% load static %}
     <link rel="stylesheet" href="style.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -49,6 +50,7 @@
           <a class="dropdown-item" href="/listall">listall</a>
           <a class="dropdown-item" href="/listone">listone</a>
           <a class="dropdown-item" href="/post">addstd</a>
+          <a class="dropdown-item" href="/post1/">addstd2</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -64,8 +66,10 @@
     </ul>
   </div>
 </nav>
+<main role="main" class="container">
     <div id="content">
         {% block content %}{% endblock %}
     </div>
+  </main>
 </body>
 </html>
