--- a/firstproject/templates/listall.html
+++ b/firstproject/templates/listall.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 		<h2>顯示 student 資料表所有資料</h2>
-		<table border="1" cellpadding="0" cellspacing="0">
-			<th>編號</th><th>姓名</th><th>性別</th><th>生日</th>
+		<table border="1" cellpadding="0" cellspacing="0" class="table table-striped">
+			<th>編號</th><th>姓名</th><th>學號</th><th>性別</th><th>生日</th>
 			<th>郵件帳號</th><th>電話</th><th>地址</th>
 			{% for student in allStudents %}
 				<tr>
