--- a/firstproject/templates/base.html
+++ b/firstproject/templates/base.html
@@ -50,7 +50,8 @@
           <a class="dropdown-item" href="/listall">listall</a>
           <a class="dropdown-item" href="/listone">listone</a>
           <a class="dropdown-item" href="/post">addstd</a>
-          <a class="dropdown-item" href="/post1/">addstd2</a>
+          <a class="dropdown-item" href="/post1">addstd2</a>
+          <a class="dropdown-item" href="/post2">postform</a>
         </div>
       </li>
       <li class="nav-item dropdown">
