--- a/firstproject/templates/base.html
+++ b/firstproject/templates/base.html
@@ -52,6 +52,7 @@
           <a class="dropdown-item" href="/post">addstd</a>
           <a class="dropdown-item" href="/post1">addstd2</a>
           <a class="dropdown-item" href="/post2">postform</a>
+          <a class="dropdown-item" href="/delete">delete</a>
         </div>
       </li>
       <li class="nav-item dropdown">
