--- a/firstproject/templates/base.html
+++ b/firstproject/templates/base.html
@@ -49,9 +49,11 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/listall">listall</a>
           <a class="dropdown-item" href="/listone">listone</a>
+          <hr class="dropdown-divider">
           <a class="dropdown-item" href="/post">addstd</a>
           <a class="dropdown-item" href="/post1">addstd2</a>
           <a class="dropdown-item" href="/post2">postform</a>
+          <hr class="dropdown-divider">
           <a class="dropdown-item" href="/delete">delete</a>
         </div>
       </li>
