修改刪除資料表

--- a/firstproject/templates/base.html
+++ b/firstproject/templates/base.html
@@ -47,14 +47,8 @@
           Student
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="/listall">listall</a>
-          <a class="dropdown-item" href="/listone">listone</a>
-          <hr class="dropdown-divider">
-          <a class="dropdown-item" href="/post">addstd</a>
-          <a class="dropdown-item" href="/post1">addstd2</a>
-          <a class="dropdown-item" href="/post2">postform</a>
-          <hr class="dropdown-divider">
-          <a class="dropdown-item" href="/delete">delete</a>
+          <a class="dropdown-item" href="/listall">所有學生資料(listall)</a>
+          <a class="dropdown-item" href="/listone">一位學生資料(listone)</a>
         </div>
       </li>
       <li class="nav-item dropdown">
