--- a/firstproject/templates/listall.html
+++ b/firstproject/templates/listall.html
@@ -5,7 +5,7 @@
 		<h2>顯示 student 資料表所有資料</h2>
 		<table border="1" cellpadding="0" cellspacing="0" class="table table-striped">
 			<th>編號</th><th>姓名</th><th>學號</th><th>性別</th><th>生日</th>
-			<th>郵件帳號</th><th>電話</th><th>地址</th>
+			<th>郵件帳號</th><th>電話</th><th>地址</th><th>編輯</th><th>刪除</th>
 			{% for student in allStudents %}
 				<tr>
 					<td>{{ student.id }} </td>
@@ -15,10 +15,13 @@
 					<td>{{ student.stuBirth }} </td>
 					<td>{{ student.stuEmail }} </td>
 					<td>{{ student.stuPhone}} </td>
-					<td>{{ student.stuAddress }} </td>	
+					<td>{{ student.stuAddress }} </td>
+					<td><button type="edit" class="btn btn-primary" name="button" id="button"  onclick="location.href='/edit/{{ student.stuID }}'">編輯</button> </td>	
+					<td><button type="delete" class="btn btn-primary" name="button" id="button"  onclick="location.href='/delete/{{ student.stuID }}'">刪除</button> </td>		
 				</tr>
 			{% endfor %}
 		</table>
+		<button type="add" class="btn btn-primary" name="button" id="button"  onclick="location.href='/post1'">新增學生資料</button>
 {% endblock %}
 
 	
